# SIRIUS

./: CMakeLists.txt
julia_module/: CMakeLists.txt  README  SIRIUS.jl  Sirius.jl  ccall_test.jl  comp_dftk.jl  comp_dftk_C.jl  comp_dftk_Fe.jl  cxxwrap_test.jl  dftk_mag.jl  dftk_test.jl  julia_exampl.jl  sirius.json  sirius_cxxwrap.cpp  sirius_jl.cpp
julia_module/binary_buider_recipes/COSTA/: build_tarballs.jl
julia_module/binary_buider_recipes/SIRIUS/: build_tarballs.jl
julia_module/binary_buider_recipes/SpFFT/: build_tarballs.jl
julia_module/binary_buider_recipes/spla/: build_tarballs.jl
julia_module/bonjour_test/: CMakeLists.txt  bonjour.cpp  julia_exampl.jl
src/: CMakeLists.txt
src/api/: generate_c_headers.py  sirius_api.cpp  sirius_c_headers.h  test.cpp  test.hpp
src/context/: config.hpp  input_schema.json
src/core/: memory.hpp
src/core/r3/: r3.hpp
src/density/: density.cpp
src/dft/: dft_ground_state.cpp
src/potential/: potential.cpp  xc.cpp  xc_functional_base.hpp
src/unit_cell/: atom_type.cpp
